Subida final lab 28

--- a/Notebooks/modulo8-leccion09-ajuste-logistica.ipynb
+++ b/Notebooks/modulo8-leccion09-ajuste-logistica.ipynb
@@ -799,29 +799,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \"logistic_regression\": [\n",
-    "#                 {'penalty': ['l1'], 'solver': ['saga'], 'C': [0.0000000001, 0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]},\n",
-    "#                 {'penalty': ['l2'], 'solver': ['liblinear'], 'C': [ 0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]},\n",
-    "#                 {'penalty': ['elasticnet'], 'solver': ['saga'], 'l1_ratio': [0.1, 0.3, 0.5, 0.7, 0.9], 'C': [ 0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]}\n",
-    "#             ],\n",
-    "# el 0.000000001 ese es bastante cuestionable\n",
-    "# pero basicamente, el concepto es que teneis que sustituir en el src el diccionario de parametros de logistic_regression\n",
-    "# para aclarar: debe haber versiones que no funcionan con el 'none'\n",
-    "# a mi me peta, por eso no lo he incluido\n",
-    "# \"logistic_regression\": [\n",
-    "#     {'penalty': ['l1'], 'solver': ['saga'], 'C': [0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]},\n",
-    "#     {'penalty': ['l2'], 'solver': ['liblinear'], 'C': [0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]},\n",
-    "#     {'penalty': ['elasticnet'], 'solver': ['saga'], 'l1_ratio': [0.1, 0.3, 0.5, 0.7, 0.9], 'C': [0.001, 0.01, 0.1, 1, 10, 100], 'max_iter': [10000]},\n",
-    "#     {'penalty': ['none'], 'solver': ['lbfgs'], 'max_iter': [10000]}\n",
-    "# ]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -895,10 +872,23 @@
     "    test\t0.52\t0.52\t0.52\t0.52\t0.04\t0.52 \n",
     "  \n",
     "\n",
-    "Modelo 5(arreglado age que no la estaba encodeando)(0.8): \n",
+    "Modelo 5(arreglado age que no la estaba encodeando)(0.8):   \n",
+    "  \n",
     "\taccuracy\tprecision\trecall\tf1\tkappa\tauc\n",
     "train\t0.55\t0.55\t0.55\t0.54\t0.09\t0.56\n",
     "test\t0.53\t0.53\t0.53\t0.52\t0.05\t0.53    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **CONCLUSION Final**  \n",
+    "  \n",
+    "Ningún modelo parece ser adecuado porque las métricas apenas son superiores al azar.\n",
+    "En cuanto al mejor modelo:  \n",
+    "- El Modelo 3 es el más prometedor en entrenamiento, pero no generaliza nada de nada porque es demasiado especifico (Over fitting)\n",
+    "- El Modelo 1 (0.8) me sale como el más consistente (teniendo en cuenta la mediocridad de las métricas) porque es de los que menos Over fitting tiene (junto al Modelo 5) aunque es pobre en rendimiento.  "
    ]
   },
   {
