Subida lab 28 con parametrso subidos

--- a/Notebooks/modulo8-leccion09-ajuste-logistica.ipynb
+++ b/Notebooks/modulo8-leccion09-ajuste-logistica.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     "# from imblearn.combine import SMOTETomek\n",
     "\n",
     "\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split,GridSearchCV\n",
     "# Para realizar la clasificación y la evaluación del modelo\n",
     "# -----------------------------------------------------------------------\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "1                     1                      1                      1  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,38 +484,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 0, 1, 1, 0, 0, 0, 1, 0])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_train,x_test,y_train,y_test= train_test_split(x,y,train_size=0.8, random_state=42, shuffle=True)\n",
-    "modelo_logi= LogisticRegression()\n",
-    "modelo_logi.fit(x_train,y_train)\n",
-    "\n",
-    "\n",
-    "\n",
-    "y_pred_train_prob = modelo_logi.predict_proba(x_train)[:, 1]  #cogemos todas las probabilidades de que pertenezca al grupo 1\n",
-    "y_pred_test_prob = modelo_logi.predict_proba(x_test)[:, 1]\n",
-    "y_pred_train=modelo_logi.predict(x_train)\n",
-    "y_pred_test=modelo_logi.predict(x_test)\n",
-    "                  \n",
-    "y_pred_test[:10]"
+    "params_logistic = {\n",
+    "    'penalty': ['l1', 'l2', 'elasticnet', 'none'],\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],\n",
+    "    'solver': ['liblinear', 'saga'],\n",
+    "    'max_iter': [100, 200, 500]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test= train_test_split(x,y,train_size=0.8, random_state=42, shuffle=True)\n",
+    "modelo_logi= LogisticRegression()\n",
+    "# Ajuste del modelo\n",
+    "grid_search_logistica = GridSearchCV(estimator=modelo_logi, \n",
+    "                                param_grid=params_logistic, \n",
+    "                                cv=5, \n",
+    "                                scoring='accuracy')\n",
+    "\n",
+    "grid_search_logistica.fit(x_train,y_train)\n",
+    "modelo_final_logistica = grid_search_logistica.best_estimator_\n",
+    "\n",
+    "# Ajustar el modelo con los datos de entrenamiento\n",
+    "modelo_final_logistica.fit(x_train, y_train)\n",
+    "\n",
+    "# Hacer las predicciones para los datos\n",
+    "y_pred_train = modelo_final_logistica.predict(x_train)\n",
+    "y_pred_test = modelo_final_logistica.predict(x_test)\n",
+    "\n",
+    "# Obtener Probabilidades predichas\n",
+    "y_pred_train_prob = modelo_final_logistica.predict_proba(x_train)[:,1]\n",
+    "y_pred_test_prob = modelo_final_logistica.predict_proba(x_test)[:,1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# modelo_logi.fit(x_train,y_train)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# y_pred_train_prob = modelo_logi.predict_proba(x_train)[:, 1]  #cogemos todas las probabilidades de que pertenezca al grupo 1\n",
+    "# y_pred_test_prob = modelo_logi.predict_proba(x_test)[:, 1]\n",
+    "# y_pred_train=modelo_logi.predict(x_train)\n",
+    "# y_pred_test=modelo_logi.predict(x_test)\n",
+    "                  \n",
+    "# y_pred_test[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +613,7 @@
        "4     0         1"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,17 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[449, 530],\n",
-       "       [407, 590]])"
+       "array([[287, 692],\n",
+       "       [247, 750]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -659,19 +690,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>train</th>\n",
-       "      <td>0.55</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>0.55</td>\n",
+       "      <td>0.53</td>\n",
        "      <td>0.54</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.56</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test</th>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0.53</td>\n",
+       "      <td>0.52</td>\n",
        "      <td>0.53</td>\n",
        "      <td>0.52</td>\n",
+       "      <td>0.50</td>\n",
        "      <td>0.05</td>\n",
        "      <td>0.53</td>\n",
        "    </tr>\n",
@@ -681,11 +712,11 @@
       ],
       "text/plain": [
        "       accuracy  precision  recall   f1  kappa  auc\n",
-       "train      0.55       0.55    0.55 0.54   0.09 0.56\n",
-       "test       0.53       0.53    0.53 0.52   0.05 0.53"
+       "train      0.53       0.54    0.53 0.51   0.06 0.54\n",
+       "test       0.52       0.53    0.52 0.50   0.05 0.53"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -811,72 +842,72 @@
    "source": [
     "Modelo 1(0.8):  \n",
     "  \n",
-    "        accuracy precision recall\tf1\t   kappa    auc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.55\t0.55\t0.55\t0.55\t0.11\t0.57\n",
     "    test\t0.53\t0.53\t0.53\t0.53\t0.06\t0.54\n",
     "\n",
     "\n",
     "Modelo 1(0.7):  \n",
     "   \n",
-    "        accuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.55\t0.55\t0.55\t0.55\t0.10\t0.57\n",
     "    test\t0.53\t0.53\t0.53\t0.53\t0.06\t0.54\n",
     "\n",
     "\n",
     "Modelo 2(outliers imputados(Iterative))(0.7):  \n",
     "   \n",
-    "\t    accuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.55\t0.55\t0.55\t0.55\t0.10\t0.58\n",
     "    test\t0.53\t0.53\t0.53\t0.53\t0.05\t0.53\n",
     "  \n",
     "\n",
     "Modelo 2(outliers imputados(Iterative))(0.8):  \n",
     "  \n",
-    "\t    accuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.55\t0.55\t0.55\t0.55\t0.10\t0.58\n",
     "    test\t0.51\t0.51\t0.51\t0.51\t0.02\t0.53\n",
     "  \n",
     "\n",
     "Modelo 3(sin columna transaction_time)(0.8):  \n",
     "   \n",
-    "        accuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.62\t0.62\t0.62\t0.62\t0.24\t0.68\n",
     "    test\t0.52\t0.52\t0.52\t0.52\t0.03\t0.53   \n",
     "\n",
     "\n",
     "Modelo 3(sin columna transaction_time)(0.7):  \n",
     "   \n",
-    "    \taccuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.97\t0.97\t0.97\t0.97\t0.94\t0.99\n",
     "    test\t0.51\t0.51\t0.51\t0.51\t0.03\t0.51  \n",
     "\n",
     "\n",
     "Modelo 4(LOF en vez de IFO)(0.8):  \n",
     "   \n",
-    "    \taccuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.54\t0.54\t0.54\t0.54\t0.09\t0.56\n",
     "    test\t0.51\t0.52\t0.51\t0.51\t0.03\t0.51   \n",
     "\n",
     "\n",
     "Modelo 4(LOF en vez de IFO)(0.7):  \n",
     "   \n",
-    "    \taccuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.55\t0.55\t0.55\t0.55\t0.09\t0.57\n",
     "    test\t0.51\t0.51\t0.51\t0.50\t0.01\t0.51   \n",
     "  \n",
     "    \n",
     "Modelo 5(arreglado age que no la estaba encodeando)(0.7):   # Tengo que repetir las de arriba tras haber arreglado esto del encoding\n",
     "   \n",
-    "\t    accuracy\tprecision\trecall\tf1\tkappa\tauc\n",
+    "        accuracy precision recall\tf1  kappa    auc\n",
     "    train\t0.54\t0.54\t0.54\t0.54\t0.08\t0.56\n",
     "    test\t0.52\t0.52\t0.52\t0.52\t0.04\t0.52 \n",
     "  \n",
     "\n",
     "Modelo 5(arreglado age que no la estaba encodeando)(0.8):   \n",
     "  \n",
-    "\taccuracy\tprecision\trecall\tf1\tkappa\tauc\n",
-    "train\t0.55\t0.55\t0.55\t0.54\t0.09\t0.56\n",
-    "test\t0.53\t0.53\t0.53\t0.52\t0.05\t0.53    "
+    "        accuracy precision recall\tf1  kappa    auc\n",
+    "    train\t0.55\t0.55\t0.55\t0.54\t0.09\t0.56\n",
+    "    test\t0.53\t0.53\t0.53\t0.52\t0.05\t0.53    "
    ]
   },
   {
@@ -888,7 +919,7 @@
     "Ningún modelo parece ser adecuado porque las métricas apenas son superiores al azar.\n",
     "En cuanto al mejor modelo:  \n",
     "- El Modelo 3 es el más prometedor en entrenamiento, pero no generaliza nada de nada porque es demasiado especifico (Over fitting)\n",
-    "- El Modelo 1 (0.8) me sale como el más consistente (teniendo en cuenta la mediocridad de las métricas) porque es de los que menos Over fitting tiene (junto al Modelo 5) aunque es pobre en rendimiento.  "
+    "- El Modelo 1 (0.8) me sale como el más consistente (teniendo en cuenta la mediocridad de las métricas) porque es de los que menos Over fitting tiene (junto al Modelo 5) aunque es pobre en rendimiento. Además me quedo con este modelo porque priorizamos tener un alto Recall porque preferimos tener falsos positivos a falsos negativos."
    ]
   },
   {
